--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
-body{
-    background-color: black;
+body {
+    box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
+}
+
+.header{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+.img-span {
+    width: 50px;
+    height: 50px;
+}
+
+.img-span img {
+    width: 50px;
+    height: 50px;
+}
+
+button{
+    padding: 0;
+    margin: 0;
+    border: 0;
+    width: 70px;
+    height: 70px;
+}
+
+button img{
+    height: 70px;
+    width: 70px;
 }
