--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,28 @@ body {
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
+.header_ul{
+    display: flex;
+    gap:45px;
+    padding: 0;
+}
+
+.header_ul li {
+    list-style: none;
+    text-decoration: none;
+}
+
+.header_ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 .img-span {
     width: 70px;
     height: 70px;
+    margin-left: 70px;
 }
 
 .img-span img {
@@ -22,15 +41,54 @@ body {
     height: 70px;
 }
 
-button{
+.header_button{
     padding: 0;
     margin: 0;
     border: 0;
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
+    margin-right: 70px;
 }
 
-button img{
-    height: 70px;
-    width: 70px;
+.header_button img{
+    height: 80px;
+    width: 80px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:520px) {
+    .header{
+        height: 150px;
+        justify-content: center;
+    }
+    .img-span{
+        display:none;
+    }
+    .header_button{
+        display: none;
+    }
 }
