--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ body {
 .header_ul li {
     list-style: none;
     text-decoration: none;
+    animation: 2s moveA ease;
+    animation-delay: 1s;
+    
 }
 
 .header_ul li a {
@@ -28,6 +31,7 @@ body {
     color: black;
     font-size: 20px;
     font-weight: 600;
+    
     
 }
 
@@ -108,7 +112,15 @@ body {
 
 
 
+@keyframes moveA {
+    from {
+        transform:  translateY(-100px)
 
+    }
+    to {
+        transform: translateY(0) rotate(360deg)
+    }
+}
 
 @media screen and (max-width:610px) {
     .header{
