after work with animation part 2

--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,11 @@ body {
     list-style: none;
     text-decoration: none;
     animation: 2s moveA ease;
-    animation-delay: 1s;
-    
+      transition: transform 0.5s ease;
+}
+
+.header_ul li:hover{
+    transform:scale(1.05);
 }
 
 .header_ul li a {
