--- a/css/style.css
+++ b/css/style.css
@@ -99,34 +99,12 @@ body {
 }
 
 .main__menu{
-    width: 1000px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
     background-color: black;
     animation: 2s moveMenu ease;
     position: absolute;   
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-@keyframes moveMenu {
-    from {
-        transition: translateX(100px);
-    }
-    to {
-        transform: translateX(0);
-    }
-}
-
 
 @keyframes moveA {
     from {
