--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 .header_ul li a {
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 23px;
     font-weight: 600;
     
     
@@ -47,20 +47,25 @@ body {
 .img-span img {
     width: 70px;
     height: 70px;
+    animation: 2s moveA ease;
+    transition: transform 0.5s ease;
 }
 
 .header_button{
     padding: 0;
     margin: 0;
     border: 0;
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     margin-right: 70px;
+    background-color: white;
 }
 
 .header_button img{
     height: 70px;
     width: 70px;
+    animation: 2s moveA ease;
+    transition: transform 0.5s ease;
 }
 
 .main {
