--- a/css/style.css
+++ b/css/style.css
@@ -1,186 +1,180 @@
 body {
-    box-sizing: border-box;
-    font-family: "Open Sans", sans-serif;
+	box-sizing: border-box;
+	font-family: 'Open Sans', sans-serif;
 }
 
-.header{
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+.header {
+	width: 100%;
+	height: 200px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
-.header_ul{
-    display: flex;
-    gap:45px;
-    padding: 0;
+.header_ul {
+	display: flex;
+	gap: 45px;
+	padding: 0;
 }
 
 .header_ul li {
-    list-style: none;
-    text-decoration: none;
-   animation: 2s moveA ease;
-   transition: transform 0.5s ease;
-   
+	list-style: none;
+	text-decoration: none;
+	animation: 2s moveA ease;
+	transition: transform 0.5s ease;
 }
 
-.header_ul li:hover{
-    transform:scale(1.05);
+.header_ul li:hover {
+	transform: scale(1.05);
 }
-
-
 
 .header_ul li a {
-    text-decoration: none;
-    color: black;
-    font-size: 23px;
-    font-weight: 600;
+	text-decoration: none;
+	color: black;
+	font-size: 23px;
+	font-weight: 600;
 }
 
 .img-span {
-    width: 70px;
-    height: 70px;
-    margin-left: 70px;
+	width: 70px;
+	height: 70px;
+	margin-left: 70px;
 }
 
 .img-span img {
-    width: 70px;
-    height: 70px;
-    animation: 2s moveA ease;
+	width: 70px;
+	height: 70px;
+	animation: 2s moveA ease;
 }
 
-.header_button{
-    padding: 0;
-    margin: 0;
-    border: 0;
-    width: 70px;
-    height: 70px;
-    margin-right: 70px;
-    background-color: white;
+.header_button {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	width: 70px;
+	height: 70px;
+	margin-right: 70px;
+	background-color: white;
 }
 
-.header_button img{
-    height: 70px;
-    width: 70px;
-    animation: 2s moveA ease;
+.header_button img {
+	height: 70px;
+	width: 70px;
+	animation: 2s moveA ease;
 }
 
 .main {
-    background-color: black;
-    width: 550px;
-    height: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 0 auto 50px auto;
+	background-color: black;
+	width: 550px;
+	height: 600px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	margin: 0 auto 50px auto;
 }
 
 .firstPart {
-    width: 250px;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	width: 250px;
+	height: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .secondPart {
-    width: 250px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 0 50px 0;
+	width: 250px;
+	height: 200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 0 50px 0;
 }
 
 .secondPartButton {
-    width: 250px;
-    height: 200px;
-    font-size: 18px;
-    font-weight: 600;
- 
+	width: 250px;
+	height: 200px;
+	font-size: 18px;
+	font-weight: 600;
 }
 
-.info{
-    color:white;
-    width: 200px;
-    height: 200px;
-    display: flex;
-    font-size: 18px;
-    justify-content: center;
-    align-items: center;
-    font-size: 25px;
-    font-weight: 600;
-    border-radius: 50%;
- 
+.info {
+	color: white;
+	width: 200px;
+	height: 200px;
+	display: flex;
+	font-size: 18px;
+	justify-content: center;
+	align-items: center;
+	font-size: 25px;
+	font-weight: 600;
+	border-radius: 50%;
 }
 
-.main__menu{
-    width: 100%;
-    height: 100%;
-    top:0;
-    left: 0;
-    background-color: black;
-    position: absolute;   
+.main__menu {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: black;
+	position: absolute;
 }
 
 @keyframes moveA {
-    from {
-        transform:  translateY(-100px)
-
-    }
-    to {
-        transform: translateY(0) rotate(360deg)
-    }
+	from {
+		transform: translateY(-100px);
+	}
+	to {
+		transform: translateY(0) rotate(360deg);
+	}
 }
 
-@media screen and (max-width:610px) {
-    .header{
-        height: 150px;
-        justify-content: center;
-    }
-    .img-span{
-        display:none;
-    }
-    .header_button{
-        display: none;
-    }
+@media screen and (max-width: 610px) {
+	.header {
+		height: 150px;
+		justify-content: center;
+	}
+	.img-span {
+		display: none;
+	}
+	.header_button {
+		display: none;
+	}
 }
 
-.example{
-    width: 300px;
-    height: 300px;
-    border: 1px solid black;
-    margin: 0 auto;
+.example {
+	width: 300px;
+	height: 300px;
+	border: 1px solid black;
+	margin: 0 auto;
 }
-.hed{
-    width: 300px;
-    height: 150px; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.fot{
-    width: 300px;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.hed {
+	width: 300px;
+	height: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.example__res{
-    width: 300px;
-    height: 30px;
+.fot {
+	width: 300px;
+	height: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.example__res-text{
-    margin: 0;
-    margin: 0 0  0 40px;
+.example__res {
+	width: 300px;
+	height: 30px;
 }
 
-.header__ul__li__a--active{
-     color: red !important;
+.example__res-text {
+	margin: 0;
+	margin: 0 0 0 40px;
+}
+
+.header__ul__li__a--active {
+	color: red !important;
 }
